-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 12.0.1
-
None
-
-
345ae8e4d (14.0), 5221d53a6 (14.0)
I'm trying to set up Qt Creator for debugging on a "bare metal" device. (ARM system, using JTAG POD with built-in GDB server.)
I think I can generally get this to work, but I'm experiencing an issue with the Run configuration: It seems like Qt Creator variables can't be used in "Executable" and "Working directory" settings. I get the normal "variables" icon and can select from a list etc., but it looks like nothing is ever expanded; if for instance I set Executable to "%{sourceDir}/executablename" and try to start debugging, I get
Cannot debug: Could not find executable for "%{sourceDir}/exectablename".
in the Application Output view.
I see this only for settings connected to a Kit for my device. With the same configuration under Desktop, the debugger generally starts as expected. Or if the file is actually missing, "%{sourceDir}" is replaced by the real source directory path in error messages.
For Gerrit Dashboard: QTCREATORBUG-30925 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
566108,2 | ProjectExplorer: Merge CustomExecutableRunConfiguration::runnable() | 14.0 | qt-creator/qt-creator | Status: MERGED | +2 | -1 |
566109,2 | BareMetal: Use runnable() to get executable and arguments | 14.0 | qt-creator/qt-creator | Status: MERGED | +2 | -1 |