ProjectExplorer: Merge CustomExecutableRunConfiguration::runnable()

... into parent class implementation.
This way, the executable expansion will be done for all sub-classes, the
remote custom run configurations being the most relevant ones.

Task-number: QTCREATORBUG-30925
Change-Id: Id7715d9f60338767c0623fa33749ef18338ae479
Reviewed-by: hjk <hjk@qt.io>